[project]
name = "comfyui-golden-noise"
description = "ComfyUI Custom Node for [a/'Golden Noise for Diffusion Models: A Learning Framework'](https://arxiv.org/abs/2411.09502) and most of the code is adapted from [a/here](https://github.com/xie-lab-ml/Golden-Noise-for-Diffusion-Models). This node refines the initial latent noise in the diffusion process, enhancing both image quality and semantic coherence."
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = ["timm", "einops"]

[project.urls]
Repository = "https://github.com/LucipherDev/ComfyUI-Golden-Noise"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-Golden-Noise"
Icon = ""
